k8s/applications/automation/home-assistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: http
